--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
     <artifactId>tenant-scope</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
+    <packaging>${packaging.type}</packaging>
 
     <name>Tenant Scope</name>
-    <description>asd</description>
+    <description>Multi-Tenancy Spring Boot Application with a custom scope and configuration properties</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <packaging.type>jar</packaging.type>
     </properties>
 
     <parent>
@@ -47,4 +48,21 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>war</id>
+            <properties>
+                <packaging.type>war</packaging.type>
+            </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
