reworked strategy again, now wraps property sources with a custom environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 foo.bar = default
-foo.bar[de] = de
-foo.bar[cz] = cz
+foo.bar@de = de
+foo.bar@cz = cz
+
+scoped.property = property-default
+scoped.property@de = property-de
+scoped.property@cz = property-cz
